--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
         "@inertiajs/vue3": "^1.0.14",
         "@tailwindcss/forms": "^0.5.7",
         "@tailwindcss/typography": "^0.5.10",
-        "@vitejs/plugin-vue": "^5.0.0",
+        "@vitejs/plugin-react": "^4.2.1",
         "autoprefixer": "^10.4.16",
         "axios": "^1.7.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.32",
         "tailwindcss": "^3.4.0",
-        "vite": "^5.0",
-        "vue": "^3.3.13"
+        "vite": "^5.0"
+    },
+    "dependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
     }
 }
