--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "watch": "^0.13.0",
     "ziggy-js": "^2.3.0"
   },
   "prettier": {
